# pyInegi

./: .gitignore  67  CAMBIADO.txt  Interactive-1.ipynb  Oaxaca.gpkg  README.md  Yucatan.gpkg  batimetriasombreado.gpkg  centralDistancias.py  centrales.qgz  centro.py  descargas.py  esqueletor.dbf  esqueletor.shp  esqueletor.shx  lineaCentral2.py  lineaCentral3.py  manzanas_sin_privadas.dbf  manzanas_sin_privadas.shp  manzanas_sin_privadas.shx  mapa.html  miGeopaquete  miGeopaquete.gpkg  poligono.dbf  poligono.shp  poligono.shx  propYmeto.json  prueba.py  prueba3.dbf  prueba3.sbn  prueba3.sbx  prueba3.shp  prueba3.shx  pruebas.py  pyproject.toml  requeriments.txt  setup.py  setup___.py  suavizar.py  variables.py  (+1 more)
.myVenvPro/: pyvenv.cfg
.myVenvPro/Scripts/: Activate.ps1  _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _ctypes_test.pyd  _decimal.pyd  _distutils_findvs.pyd  (+21 more)
DatosEntrada/: SinIslas.shx  costa-acapulco.dbf  pol1.dbf  pol1.qmd  pol1.shp  pol1.shx  prueba3.dbf  prueba3.qix  prueba3.shp  prueba3.shp.xml  prueba3.shx  vertices.dbf  vertices.shp  vertices.shx  vtx1.dbf  vtx1.shp  vtx1.shx
datosEjemplo/: costa-acapulco.shp  costa-acapulco.shx  manzan.dbf  manzan.shp  manzan.shx
pyInegi/: Principal.py  __init__.py  basico.py  creaJson.py  generalizar.py  geografia.py  instalacionesPortuarias.py  limpiarBarrer.py  lineaCentral.py  lineaCentro.py  multiprocesos.py  noise.py  poligono_enPartes.py  polyskel.py  quitaVertices___ARCPY.py  reducePuntos.py  requeriments.txt  requirements.txt  separaLineas.py  setup.py  shapely_tools.py  shapely_tools3.py  usaPy27.py  webMap.py
(+55 files in other folders)
