[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyInegi"
version = "1.2.3"


[project.urls]
Homepage = "https://inegi.org.mx"
Documentation = "https://inegi.org.mx/desarrolladores/apis/pyInegi"
Repository = "https://github.com/INEGI-Python/pyInegi.git"