[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyInegi"
version = "2025.0.1"

dependencies = [
    "numpy>=2.1.1",
    "matplotlib>=3.9.2", 
    "folium>=0.17.0",
    "mapclassify>=2.8.0",
    "httpimport>=1.4.0",
    "geopandas>=1.0.1",
    "requests>=2.32.3",
    "shapely>=2.0.6",
    "scipy>=1.14.1",
    "fiona>=1.10.1",
    "euclid3>=0.1",
    "rtree>=1.0.1"
]


[project.urls]
Homepage = "https://inegi.org.mx"
Documentation = "https://inegi.org.mx/desarrolladores/apis/pyInegi"
Repository = "https://github.com/INEGI-Python/pyInegi.git"