[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyInegi"
version = "0.0.11"

dependencies = [
   'numpy',
    'matplotlib',
    'folium', 
    'mapclassify',
    'httpimport',
    'geopandas',
    'requests',
    'shapely',
    'scipy',
    'fiona',
    'euclid3',
    'rtree'
]


[project.urls]
Homepage = "https://inegi.org.mx"
Documentation = "https://inegi.org.mx/desarrolladores/apis/pyInegi"
Repository = "https://github.com/INEGI-Python/pyInegi.git"
